# shmtu-cas-rs

./: .gitignore  Cargo.toml  README.md  run_ocr_gui.py
.github/workflows/: docs-pages.yml
Core/shmtu-cas/: Cargo.toml
Core/shmtu-cas-cli/: Cargo.toml
Core/shmtu-cas-cli/src/: main.rs
Core/shmtu-cas/src/: lib.rs
Core/shmtu-cas/src/captcha/: mod.rs  ocr.rs  ocr_http.rs  ocr_http_resolver.rs  ocr_resolver.rs
Core/shmtu-cas/src/cas/: epay.rs  wechat.rs
Core/shmtu-cas/src/classifier/: classify.rs  mod.rs  position.rs
Core/shmtu-cas/src/datatype/bill/: bill_item_status.rs
Core/shmtu-cas/src/parser/: mod.rs  person_account.rs
Core/shmtu-cas/src/parser/bill/: bill_item_parser.rs  bill_list_parser.rs  mod.rs
Core/shmtu-cas/src/sync/: mod.rs
Docs/dev/: README.md
Docs/docs/: README.md
Documents/: package-lock.json  package.json
Documents/docs/: README.md  architecture.md  crates.md  getting-started.md  index.md
Documents/docs/.vitepress/: config.ts
Documents/docs/examples/: integration.md
Documents/docs/public/images/screenshots/: README.md
Documents/docs/shmtu-cas/: api-overview.md  captcha.md  cas-and-login.md  parser-and-data.md  sync.md
Documents/docs/shmtu-ocr/: onnx.md
Documents/docs/shmtu-ocr-server/: service.md
ocr/shmtu-ocr/: Cargo.toml  README.md
ocr/shmtu-ocr-cli/: Cargo.toml
ocr/shmtu-ocr-cli/src/: main.rs
ocr/shmtu-ocr-gui/: Cargo.toml
ocr/shmtu-ocr-gui/src/: main.rs  theme.rs  util.rs  worker.rs
ocr/shmtu-ocr-gui/src/app/: actions.rs  mod.rs  model.rs  ui.rs
ocr/shmtu-ocr-server/: Cargo.toml  Dockerfile  docker-compose.yml
ocr/shmtu-ocr-server/src/: main.rs  models.rs  pool.rs
ocr/shmtu-ocr-server/src/server/: http.rs  tcp.rs
ocr/shmtu-ocr/src/: downloader.rs  lib.rs  manifest.rs  tag_catalog.rs  tag_resolver.rs
ocr/shmtu-ocr/src/backend/: mod.rs  v1.rs  v2.rs
ocr/shmtu-ocr/src/image/: captcha_image.rs  image_utils.rs  mod.rs  resnet_process.rs
shmtu-cas/: Cargo.toml
shmtu-cas-cli/: Cargo.toml
shmtu-cas-cli/src/: main.rs
shmtu-cas/src/: lib.rs
shmtu-cas/src/captcha/: expr_resolver.rs  manual_resolver.rs  mod.rs  resolver.rs
shmtu-cas/src/cas/: epay.rs  mod.rs
shmtu-cas/src/datatype/bill/: bill_item.rs  bill_type.rs  mod.rs
shmtu-cas/src/parser/: export.rs  hot_water.rs  mod.rs
shmtu-cas/src/parser/bill/: bill_item_parser.rs  page_count_parser.rs
