[package]
name = "shmtu-ocr-server"
version.workspace = true
edition.workspace = true
description = "SHMTU CAS OCR Server - HTTP/TCP server with ONNX Runtime"

[[bin]]
name = "shmtu-ocr-server"
path = "src/main.rs"

[dependencies]
shmtu-ocr = { path = "../shmtu-ocr" }
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
base64 = "0.22"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
